--- a/stories.html
+++ b/stories.html
@@ -106,6 +106,16 @@
 				<div class="items-main" id="js-items-main">
 					<div class="items-item">
 						<label class="items-item__wrap items-item__check">
+							<input id="deystviya-po-zashchite-ot-virusov" type="checkbox" />
+							<div class="items-item__pic">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89825346_1108896952836299_2336927074125111948_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=111&_nc_ohc=b4feIDSH3boAX-Ahwe-&oh=e7519c9011cbacdca5a8e54547e311ba&oe=5E9B7132" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ДЕЙСТВИЯ ПО ЗАЩИТЕ ОТ ВИРУСОВ">
+								<ul class="items-item__taglist">
+								</ul>
+							</div>
+						</label>
+					</div>
+					<div class="items-item">
+						<label class="items-item__wrap items-item__check">
 							<input id="gidrastis-xgoldensealx-xx" type="checkbox" />
 							<div class="items-item__pic">
 								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89747512_829409610871133_5215298013697807848_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=PbxgKS5ARbgAX8VFGv3&oh=7cdbcc8d2618d04a81f411a7b41825e9&oe=5EA1D366" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ГИДРАСТИС (Goldenseal) 🌱">
@@ -118,7 +128,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="list-korovyaka-xmullein-leaf" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/90087795_205735070666702_4504977027204322393_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=IaKcV-rYGnkAX8pTdWK&oh=eb4be59de913b28403d16cf201ecb315&oe=5EA167B1" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЛИСТ КОРОВЯКА (Mullein leaf)">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/90087795_205735070666702_4504977027204322393_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=SGzOKh888YQAX8_psFF&oh=ab0a363de92425d330d13bd43f566445&oe=5EA167B1" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЛИСТ КОРОВЯКА (Mullein leaf)">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -148,7 +158,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="shpinatxxx" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89385356_221989658951830_6343720088222175732_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=110&_nc_ohc=GMe974_gZiwAX8NruN5&oh=c4e8f1756fff8ef1edf903fdde45079d&oe=5EA125F6" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ШПИНАТ 🌱">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89385356_221989658951830_6343720088222175732_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=110&_nc_ohc=ppXdU0uHNxYAX_NMnQd&oh=d38440e6abd6df6059a9bbfb111f8173&oe=5EA125F6" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ШПИНАТ 🌱">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -158,7 +168,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="luchshie-produkty-dlya-ukrepleniya" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89370852_663509041142462_7354772907839365725_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=pUH7BIzd2n4AX_2cEo0&oh=ac41e13aece4d661e4d5fd58822c6592&oe=5E9DBED4" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЛУЧШИЕ ПРОДУКТЫ ДЛЯ УКРЕПЛЕНИЯ">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89370852_663509041142462_7354772907839365725_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=HK3duAVR3PkAX9XZwNr&oh=ec8d3e69953e78442c4bfb69b5314ec8&oe=5E9DBED4" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЛУЧШИЕ ПРОДУКТЫ ДЛЯ УКРЕПЛЕНИЯ">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -168,7 +178,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="melissa-xlemon-balm" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89825343_1440385602789392_3454483484027583974_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=108&_nc_ohc=XMx6U9eO2ywAX9WloiH&oh=cc5648942917f19669c955ac2ba4e8e6&oe=5E9CF429" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="МЕЛИССА (Lemon balm)">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89825343_1440385602789392_3454483484027583974_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=108&_nc_ohc=9fAFBShUOFIAX-7ZDiZ&oh=eb7bda3d0ceafd73ffc6d241e3816e1e&oe=5E9CF429" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="МЕЛИССА (Lemon balm)">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -188,7 +198,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="dobavki-dlya-ukrepleniya-immunnoy" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/88276315_1076110022751388_1273011832599512356_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=104&_nc_ohc=06mdn28iEZ4AX-jZRQG&oh=e661ccf8090fb8b31bedd53c3d8b6492&oe=5E9E06D1" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ДОБАВКИ ДЛЯ УКРЕПЛЕНИЯ ИММУННОЙ">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/88276315_1076110022751388_1273011832599512356_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=104&_nc_ohc=RJ5ggUFu_y0AX_ZX9b_&oh=ef27ae42ce38c81bcdefcefe8e604983&oe=5E9E06D1" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ДОБАВКИ ДЛЯ УКРЕПЛЕНИЯ ИММУННОЙ">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -228,7 +238,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="lekarstvo-nomer-1---chesnok" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/87635143_1618628091609959_6149851510081857034_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=111&_nc_ohc=WZyFdtHGgdwAX9czWkQ&oh=02dc0ad4f1d92909d07b7edf6da3ce28&oe=5EA49860" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЛЕКАРСТВО НОМЕР 1 - ЧЕСНОК">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/87635143_1618628091609959_6149851510081857034_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=111&_nc_ohc=7XCQaXWsLLQAX8HXlRm&oh=fc3fcefa0b61173fc50054b145fbc183&oe=5EA49860" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЛЕКАРСТВО НОМЕР 1 - ЧЕСНОК">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -248,7 +258,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="xx" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/87885072_615474182628043_9134810011648972258_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=107&_nc_ohc=fG0f7InMQzwAX88YLGe&oh=1c31ccb5b48ed95885605d002ad8a6dc&oe=5E9A725D" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="❤️">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/87885072_615474182628043_9134810011648972258_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=107&_nc_ohc=IEjCM3_2ZjIAX_KecCw&oh=bd42a46a779f0b533661b11071629f6d&oe=5E9A725D" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="❤️">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -258,7 +268,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="prakticheskie-shagi-dlya-vosstanovleniya-pechenixxx" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/88135693_664660584281351_4357996011551376848_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=111&_nc_ohc=YLgrLpvTmSsAX9U1wGF&oh=3668ac431e298cc5ae11867e0d86b960&oe=5EA63E39" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ПРАКТИЧЕСКИЕ ШАГИ ДЛЯ ВОССТАНОВЛЕНИЯ ПЕЧЕНИ 💫">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/88135693_664660584281351_4357996011551376848_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=111&_nc_ohc=XoUGlYrhDNMAX9w8WfI&oh=1aef3b4d0eb9662c20e6165385a186c4&oe=5EA63E39" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ПРАКТИЧЕСКИЕ ШАГИ ДЛЯ ВОССТАНОВЛЕНИЯ ПЕЧЕНИ 💫">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -268,17 +278,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="eto-navsegda-izmenit-vashu-zhizn-xxxxx" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/85176628_1215603168649987_4407983276721146727_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=107&_nc_ohc=kOdQZQ2FPHwAX_tm3wS&oh=e3826cb609d33b614488adaf3447611f&oe=5EA741AD" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЭТО НАВСЕГДА ИЗМЕНИТ ВАШУ ЖИЗНЬ 🌱🎉">
-								<ul class="items-item__taglist">
-								</ul>
-							</div>
-						</label>
-					</div>
-					<div class="items-item">
-						<label class="items-item__wrap items-item__check">
-							<input id="malo-kto-znaet-i-dogadyvaetsyax-chto-nezdorovaya" type="checkbox" />
-							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84352737_495134488045619_7903098250688137072_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=111&_nc_ohc=SCmpIAbIZcEAX8vdNgC&oh=5024c57298e176aefa333f57db6423e8&oe=5E9D85AF" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Мало кто знает и догадывается, что нездоровая">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/85176628_1215603168649987_4407983276721146727_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=107&_nc_ohc=qC11Js_OcGsAX8hSA2V&oh=743dcfcb659388ee6b62d48c7b39ab02&oe=5EA741AD" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЭТО НАВСЕГДА ИЗМЕНИТ ВАШУ ЖИЗНЬ 🌱🎉">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
