--- a/stories.html
+++ b/stories.html
@@ -106,6 +106,16 @@
 				<div class="items-main" id="js-items-main">
 					<div class="items-item">
 						<label class="items-item__wrap items-item__check">
+							<input id="banany-s-chesnokom-protiv" type="checkbox" />
+							<div class="items-item__pic">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89948050_216341889486842_2928071985524080095_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=SJHhcQfZy2kAX8Me1Dw&oh=90d524343375af9ba622e80853dde25d&oe=5E9BA274" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="БАНАНЫ С ЧЕСНОКОМ ПРОТИВ">
+								<ul class="items-item__taglist">
+								</ul>
+							</div>
+						</label>
+					</div>
+					<div class="items-item">
+						<label class="items-item__wrap items-item__check">
 							<input id="deystviya-po-zashchite-ot-virusov" type="checkbox" />
 							<div class="items-item__pic">
 								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89825346_1108896952836299_2336927074125111948_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=111&_nc_ohc=b4feIDSH3boAX-Ahwe-&oh=e7519c9011cbacdca5a8e54547e311ba&oe=5E9B7132" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ДЕЙСТВИЯ ПО ЗАЩИТЕ ОТ ВИРУСОВ">
@@ -118,7 +128,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="gidrastis-xgoldensealx-xx" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89747512_829409610871133_5215298013697807848_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=PbxgKS5ARbgAX8VFGv3&oh=7cdbcc8d2618d04a81f411a7b41825e9&oe=5EA1D366" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ГИДРАСТИС (Goldenseal) 🌱">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89747512_829409610871133_5215298013697807848_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=Ac6gBG7pt0YAX9JaWjB&oh=d4a3dcdf664fabfffae0fdcf4f15778e&oe=5EA1D366" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ГИДРАСТИС (Goldenseal) 🌱">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -138,7 +148,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="sirop-iz-yagod-buziny" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89603917_104407507773694_3533493931988912371_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=110&_nc_ohc=DWzWmlY-zD4AX-uY4Wm&oh=af08cc83d29eecf47dcb5a4f4a2c1546&oe=5EA3741A" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="СИРОП ИЗ ЯГОД БУЗИНЫ">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89603917_104407507773694_3533493931988912371_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=110&_nc_ohc=FP6dNS8c02MAX9Gw_ey&oh=3ab80e29f2e513c52015b3701779cbda&oe=5EA3741A" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="СИРОП ИЗ ЯГОД БУЗИНЫ">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -208,7 +218,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="davno-obeshchala-napisat-" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89376508_3434455293315997_5136329399629063670_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=101&_nc_ohc=z6ZmE9No6SkAX_T7A1R&oh=b70a9dee349c5d136c50b9a7114153dd&oe=5EA05946" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Давно обещала написать">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89376508_3434455293315997_5136329399629063670_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=101&_nc_ohc=ldTj-zFEPN4AX9Njiqc&oh=60aed367e00ce113325c263d2418600a&oe=5EA05946" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Давно обещала написать">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -228,7 +238,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="retsept-bezzhirovogo-sousa" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/88197176_102353821338258_4063892763466591489_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=106&_nc_ohc=gMD-BPz_f34AX_hcj2J&oh=ec43b84292a2abcf616c8ef215297bd9&oe=5EA3BA22" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="РЕЦЕПТ БЕЗЖИРОВОГО СОУСА">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/88197176_102353821338258_4063892763466591489_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=106&_nc_ohc=oNriFwXw3ZQAX_VeBqh&oh=4cff3b8736956b4f7c177313c027aa74&oe=5EA3BA22" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="РЕЦЕПТ БЕЗЖИРОВОГО СОУСА">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -268,17 +278,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="prakticheskie-shagi-dlya-vosstanovleniya-pechenixxx" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/88135693_664660584281351_4357996011551376848_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=111&_nc_ohc=XoUGlYrhDNMAX9w8WfI&oh=1aef3b4d0eb9662c20e6165385a186c4&oe=5EA63E39" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ПРАКТИЧЕСКИЕ ШАГИ ДЛЯ ВОССТАНОВЛЕНИЯ ПЕЧЕНИ 💫">
-								<ul class="items-item__taglist">
-								</ul>
-							</div>
-						</label>
-					</div>
-					<div class="items-item">
-						<label class="items-item__wrap items-item__check">
-							<input id="eto-navsegda-izmenit-vashu-zhizn-xxxxx" type="checkbox" />
-							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/85176628_1215603168649987_4407983276721146727_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=107&_nc_ohc=qC11Js_OcGsAX8hSA2V&oh=743dcfcb659388ee6b62d48c7b39ab02&oe=5EA741AD" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЭТО НАВСЕГДА ИЗМЕНИТ ВАШУ ЖИЗНЬ 🌱🎉">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/88135693_664660584281351_4357996011551376848_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=111&_nc_ohc=XoUGlYrhDNMAX9w8WfI&oh=6ba2f811a581e1e79e07d03a7feb68e7&oe=5E9CC847" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ПРАКТИЧЕСКИЕ ШАГИ ДЛЯ ВОССТАНОВЛЕНИЯ ПЕЧЕНИ 💫">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
