--- a/error.html
+++ b/error.html
@@ -83,19 +83,10 @@
 				<div class="container">
 					<h2 class="article-more__title">ПОПУЛЯРНЫЕ</h2>
 					<div class="article-more__list">
-							<a href="./posts/./gde-naytix-zashchitu-ot-virusov.html" class="article-more__item">
-							<div class="article-more__item-pic">
-								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1317</span>
-								</div>
-								<img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/87861832_625370131360615_7022457707105560149_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=107&_nc_ohc=7F4RUrcno-IAX-j1zrG&oh=47dcf4f3c0be963205e45e750d55e5c8&oe=5EA5DF27" alt="ГДЕ НАЙТИ  ЗАЩИТУ ОТ ВИРУСОВ">
-							</div>
-							<div class="article-more__item-name">ГДЕ НАЙТИ  ЗАЩИТУ ОТ ВИРУСОВ</div>
-						</a>
 							<a href="./posts/./ob-osnovnykh-dobavkakhx-aktual-nykh.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1293</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1301</span>
 								</div>
 								<img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89358555_508706659837209_8897498237617732213_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=109&_nc_ohc=OIRXAfT_gmoAX8pk2nC&oh=d94a67b059a5fedc9db9278e497f0ecf&oe=5EA66D83" alt="ОБ ОСНОВНЫХ ДОБАВКАХ, актуальных">
 							</div>
@@ -104,7 +95,7 @@
 							<a href="./posts/./koshachiy-kogot--xcatxs.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1199</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1204</span>
 								</div>
 								<img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/87479961_498275437794629_462639628797701000_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=_HqdlZ81fUAAX_217pH&oh=2c254755937d29577e54b66e58d8fe40&oe=5E9A88FA" alt="КОШАЧИЙ КОГОТЬ (Cat’s">
 							</div>
@@ -113,25 +104,34 @@
 							<a href="./posts/./deystviya-po-zashchite-ot-virusov.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1070</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1159</span>
 								</div>
 								<img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89825346_1108896952836299_2336927074125111948_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=111&_nc_ohc=b4feIDSH3boAX-Ahwe-&oh=e7519c9011cbacdca5a8e54547e311ba&oe=5E9B7132" alt="ДЕЙСТВИЯ ПО ЗАЩИТЕ ОТ ВИРУСОВ">
 							</div>
 							<div class="article-more__item-name">ДЕЙСТВИЯ ПО ЗАЩИТЕ ОТ ВИРУСОВ</div>
 						</a>
+							<a href="./posts/./banany-s-chesnokom-protiv.html" class="article-more__item">
+							<div class="article-more__item-pic">
+								<div class="article-more__item-pic-blind">
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1030</span>
+								</div>
+								<img src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89948050_216341889486842_2928071985524080095_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=SJHhcQfZy2kAX8Me1Dw&oh=90d524343375af9ba622e80853dde25d&oe=5E9BA274" alt="БАНАНЫ С ЧЕСНОКОМ ПРОТИВ">
+							</div>
+							<div class="article-more__item-name">БАНАНЫ С ЧЕСНОКОМ ПРОТИВ</div>
+						</a>
 							<a href="./posts/./gidrastis-xgoldensealx-xx.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>965</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>987</span>
 								</div>
-								<img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89747512_829409610871133_5215298013697807848_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=PbxgKS5ARbgAX8VFGv3&oh=7cdbcc8d2618d04a81f411a7b41825e9&oe=5EA1D366" alt="ГИДРАСТИС (Goldenseal) 🌱">
+								<img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89747512_829409610871133_5215298013697807848_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=Ac6gBG7pt0YAX9JaWjB&oh=d4a3dcdf664fabfffae0fdcf4f15778e&oe=5EA1D366" alt="ГИДРАСТИС (Goldenseal) 🌱">
 							</div>
 							<div class="article-more__item-name">ГИДРАСТИС (Goldenseal) 🌱</div>
 						</a>
 							<a href="./posts/./shpinatxxx.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>952</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>956</span>
 								</div>
 								<img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89385356_221989658951830_6343720088222175732_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=110&_nc_ohc=ppXdU0uHNxYAX_NMnQd&oh=d38440e6abd6df6059a9bbfb111f8173&oe=5EA125F6" alt="ШПИНАТ 🌱">
 							</div>
@@ -140,16 +140,16 @@
 							<a href="./posts/./sirop-iz-yagod-buziny.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>947</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>953</span>
 								</div>
-								<img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89603917_104407507773694_3533493931988912371_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=110&_nc_ohc=DWzWmlY-zD4AX-uY4Wm&oh=af08cc83d29eecf47dcb5a4f4a2c1546&oe=5EA3741A" alt="СИРОП ИЗ ЯГОД БУЗИНЫ">
+								<img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89603917_104407507773694_3533493931988912371_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=110&_nc_ohc=FP6dNS8c02MAX9Gw_ey&oh=3ab80e29f2e513c52015b3701779cbda&oe=5EA3741A" alt="СИРОП ИЗ ЯГОД БУЗИНЫ">
 							</div>
 							<div class="article-more__item-name">СИРОП ИЗ ЯГОД БУЗИНЫ</div>
 						</a>
 							<a href="./posts/./luchshie-produkty-dlya-ukrepleniya.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>863</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>865</span>
 								</div>
 								<img src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89370852_663509041142462_7354772907839365725_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=HK3duAVR3PkAX9XZwNr&oh=ec8d3e69953e78442c4bfb69b5314ec8&oe=5E9DBED4" alt="ЛУЧШИЕ ПРОДУКТЫ ДЛЯ УКРЕПЛЕНИЯ">
 							</div>
